# flow-matching

./: .gitignore  LICENSE  pyproject.toml
notebooks/: eval.ipynb  lab_three.ipynb  train.ipynb  unet.pt
notebooks/labs/: lab_three.ipynb
notebooks/mnist/: eval.ipynb  latent_unet.pt  train_flow.ipynb  train_latent_flow.ipynb  train_vae.ipynb  unet.pt  vae.pt
notebooks/whar/: eval.ipynb  latent_transformer.pt  latent_vf.pt  stft.ipynb  train.ipynb  train_ae_cond.ipynb  train_flow.ipynb  train_latent_flow.ipynb  train_vae.ipynb  train_vae_cond.ipynb  unet.pt  vae.pt
src/flow_matching/: __init__.py  alphas_betas.py  model.py  odes_sdes.py  plotting.py  prob_paths.py  simulators.py  training.py  vec_fields.py
src/flow_matching/evaluation/: f1.py  kid.py
src/flow_matching/latent/: ae.py  training_ae_cond.py  training_flow.py  training_vae.py  training_vae_cond.py  vae.py
src/flow_matching/mnist/: latent_vector_field.py  sampler.py  vae.py  vector_field.py
src/flow_matching/supervised/: alphas_betas.py  densities.py  model.py  models.py  odes_sdes.py  prob_paths.py  samplers.py  simulators.py  training.py
src/flow_matching/unsupervised/: densities.py  model.py  odes_sdes.py  plotting.py  prob_paths.py  simulators.py  training.py
src/flow_matching/whar/: ae_cond.py  ae_losses.py  latent_transformer.py  latent_vector_field.py  latent_vector_field_mhsa.py  losses.py  sampler.py  stft.py  unet.py  vae.py  vae_cond.py  vae_losses.py  vector_field.py
