[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Burzer", email = "maxi.burzer@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "types-seaborn>=0.13.2.20250516",
    "types-tqdm>=4.67.0.20250516",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
